# DurakOnline

./: .gitignore  CMakeLists.txt  DOC_README.md  Doxyfile  README.md  client.cpp  df  ignoredtextFile.txt  meson.build  protocol.hpp  server.cpp  setup.sh
Client/: CMakeLists.txt  Makefile  TODO.txt  drawable.cpp  image.cpp  image.hpp  main  main.cpp  util.hpp
Client/libs/glad/include/glad/: glad.h
Client/libs/glad/src/: glad.c
Client/src/: drawable.cpp  drawable.hpp  game_node.cpp  game_node.hpp  global_state.cpp  global_state.hpp  image.cpp  main.cpp  master_node.cpp  master_node.hpp  opengl.cpp  opengl.hpp  shaders.h  toplevel_nodes.cpp  toplevel_nodes.hpp  toplevel_nodes_müll.cpp  util.cpp  util.hpp  viewport.hpp
Networking/: CMakeLists.txt  client.cpp  message.cpp  message.hpp  network.cpp  network.hpp  network_client.cpp  network_server.cpp  server.cpp  util.cpp  util.hpp
Networking/include/Networking/: message.hpp  network.hpp  util.hpp
Networking/src/: message.cpp  network_client.cpp  network_server.cpp  util.cpp
Server/: CMakeLists.txt  Doxyfile  battle.cpp  battle.hpp  card_manager.cpp  card_manager.hpp  game.cpp  game.hpp  gamehelper.cpp  gamehelper.hpp  gamelogic.hpp  helperheader.hpp  instance.hpp  manager.cpp  manager.hpp  network.cpp  network.hpp  server.cpp  server.hpp
Server/include/: battle.hpp  card_manager.hpp  game.hpp  msg_handler.hpp  server.hpp
Server/src/: ToDo  battle.cpp  card_manager.cpp  game.cpp  msg_handler.cpp  server.cpp
Test/: CMakeLists.txt  client.cpp  client_messages.txt  hello_world_test.cpp  protocol.cpp  readme.txt  server.cpp  server2.cpp  test_battle.cpp  test_game.cpp  test_helpers.cpp  test_roles.cpp
